<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tue_teleop_keyboard</name>
  <version>0.0.0</version>
  <description>The tue_teleop_keyboard package</description>

  <maintainer email="t.t.g.clephas@alumnus.tue.nl">Tim Clephas</maintainer>
  <author email="tjay@cs.brown.edu">Ivana Bildbotz</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>geometry_msgs</exec_depend>

</package>
